# go_compiler

./: CMakeLists.txt  LICENSE  README.md  Report.docx  hello.bat  hello.go  main.cpp  program.bat  program.go  test.bat
cfg/: keywords  operators  predeclIden
include/: AST.hpp  Compiler.hpp  Lexan.hpp  Parser.hpp  Runtime.hpp  Token.hpp  Translator.hpp  utility.hpp
src/: AST.cpp  Compiler.cpp  Lexan.cpp  Parser.cpp  Runtime.cpp  Token.cpp  Translator.cpp  utility.cpp
